apollo-federation/src/sources/connect/validation/snapshots/validation_tests@uri_templates__expressions-in-domain.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/uri_templates/expressions-in-domain.graphql
---
[
    Message {
        code: InvalidUrl,
        message: "`GET` in `@connect(http:)` on `Query.entireDomain` must not contain dynamic pieces in the domain section (before the first `/`, `?`, or `#`).",
        locations: [
            10:21..10:28,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "`GET` in `@connect(http:)` on `Query.endOfDomain` must not contain dynamic pieces in the domain section (before the first `/`, `?`, or `#`).",
        locations: [
            15:21..15:39,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "`GET` in `@connect(http:)` on `Query.startOfDomain` must not contain dynamic pieces in the domain section (before the first `/`, `?`, or `#`).",
        locations: [
            20:21..20:28,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "`GET` in `@connect(http:)` on `Query.middleOfDomain` must not contain dynamic pieces in the domain section (before the first `/`, `?`, or `#`).",
        locations: [
            25:21..25:35,
        ],
    },
]
