apollo-federation/src/sources/connect/validation/snapshots/validation_tests@uri_templates__invalid-jsonselection-in-expression.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/uri_templates/invalid-jsonselection-in-expression.graphql
---
[
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.resources`: nom::error::ErrorKind::Eof",
        locations: [
            12:27..12:28,
        ],
    },
]
