apollo-federation/src/sources/connect/validation/snapshots/validation_tests@uri_templates__invalid-path-parameter.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/uri_templates/invalid-path-parameter.graphql
---
[
    Message {
        code: InvalidUrl,
        message: "`GET` in `@connect(http:)` on `Query.resources` must be a valid URL template. Invalid variable `$blah`,  must be one of $args, $config, $context, $this",
        locations: [
            12:23..12:28,
        ],
    },
]
