apollo-federation/src/sources/connect/validation/snapshots/validation_tests@uri_templates__invalid_connect_url_scheme.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/uri_templates/invalid_connect_url_scheme.graphql
---
[
    Message {
        code: InvalidUrlScheme,
        message: "The value \"file://data.json\" for `GET` in `@connect(http:)` on `Query.resources` must be http or https, got file.",
        locations: [
            6:28..6:32,
        ],
    },
]
