apollo-federation/src/sources/connect/validation/snapshots/validation_tests@uri_templates__invalid_nested_paths_in_url_template_variables.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/uri_templates/invalid_nested_paths_in_url_template_variables.graphql
---
[
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.scalar`: `$args.scalar` doesn't have a field named `blah`",
        locations: [
            10:62..10:66,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.object`: `$args.input` doesn't have a field named `fieldThatDoesntExist`",
        locations: [
            15:61..15:81,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.enum`: `$args.enum` doesn't have a field named `cantHaveFields`",
        locations: [
            20:58..20:72,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Object.newField`: `$this` doesn't have a field named `fieldThatDoesntExist`",
        locations: [
            29:55..29:75,
        ],
    },
]
