apollo-federation/src/sources/connect/validation/snapshots/validation_tests@uri_templates__invalid_source_url.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/uri_templates/invalid_source_url.graphql
---
[
    Message {
        code: InvalidUrl,
        message: "The value \"127.0.0.1\" for `@source(baseURL:)` is not a valid URL: relative URL without a base.",
        locations: [
            6:40..6:51,
        ],
    },
]
